// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        className="large-column"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </span>
      <span
        className="mid-column"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </span>
      <span
        className="small-column"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </span>
      <span
        className="small-column"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </span>
      <span
        className="small-column"
      >
        Archive
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <div
      className="MuiCircularProgress-root-8 MuiCircularProgress-colorPrimary-9"
      role="progressbar"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg-11 MuiCircularProgress-svgIndeterminate-12"
        viewBox="0 0 50 50"
      >
        <circle
          className="MuiCircularProgress-circle-13 MuiCircularProgress-circleIndeterminate-14"
          cx={25}
          cy={25}
          fill="none"
          r={20}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={undefined}
  type="button"
>
  Give Me More
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      className="large-column"
    >
      <button
        className="button-inline button-active"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
    <span
      className="mid-column"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
    <span
      className="small-column"
    >
      Archive
    </span>
  </div>
  <div
    className="table-row"
  >
    &gt;
    <span
      className="large-column"
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      className="mid-column"
    >
      1
    </span>
    <span
      className="small-column"
    >
      1
    </span>
    <span
      className="small-column"
    >
      2
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    &gt;
    <span
      className="large-column"
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      className="mid-column"
    >
      2
    </span>
    <span
      className="small-column"
    >
      1
    </span>
    <span
      className="small-column"
    >
      2
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
